Fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "script-tote",
+    "name": "schema-tote",
     "version": "1.0.0",
     "homepage": "https://alexstevovich.com/a/schema-tote-nodejs",
     "author": {
